frontend/test/should_fail/enum_003.grg
using enum_model_001;

rule r {
	a:A -b:B-> a;

	modify {
		eval {
			a.e = b.i;
		}
	}
}

